fix scrollbar color

--- a/style/main.css
+++ b/style/main.css
@@ -6,7 +6,6 @@ body {
     .1vw 0vw .1vw #272726;
     overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
-    scrollbar-arrow-color: #272726;
     margin: 0;
 }
 
